--- a/web/resume_cn.html
+++ b/web/resume_cn.html
@@ -17,21 +17,21 @@
 <body>
 <div id="xyz" style="position: fixed;
     left: 90%;top:5%">
-   <a href="index_en.html"> <h3><b>Home</b></h3></a>
+   <a href="index_cn.html"> <h3><b>首页</b></h3></a>
 </div>
 <div id="doc2" class="yui-t7">
 	<div id="inner">
 		<div id="hd">
 			<div class="yui-gc">
 				<div class="yui-u first">
-					<h1>Jiangshan Yu</h1>
-					<h2>PhD researcher in Information Sercurity</h2>
+					<h1>于江山</h1>
+					<h2>计算机信息安全博士研究生</h2>
 				</div>
 
 				<div class="yui-u">
 					<div class="contact-info">
 <br>
-						<h3><a id="pdf" href="../doc/J.YU.pdf">Download PDF</a></h3>
+						<h3><a id="pdf" href="../doc/J.YU.pdf">下载PDF文档</a></h3>
 
 <!--              <a id="pdf" href="../doc/J.YU_s.pdf">Download PDF &nbsp(SHORT)</a></h3>-->
 <!--
@@ -49,45 +49,41 @@
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Profile</h2>
+							<h2>简历</h2>
 						</div>
 						<div class="yui-u">
 							<p class="enlarge">
-                I'm currently a Ph.D researcher in the School of Computer
-                Science, University of Birmingham, U.K. My research interests
-                are in security and privacy.
+                英国伯明翰大学信息安全博士在读。
 							</p>
 						</div>
 					</div><!--// .yui-gf -->
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Skills</h2>
+							<h2>专长</h2>
 						</div>
 						<div class="yui-u">
 
 								<div class="talent">
-									<h2>Security protocol Design</h2>
-									<p>Design secure protocols and systems for secure
-									communication, authentication, data transmission, etc. </p>
+									<h2>安全协议设计</h2>
+									<p>设计安全通信，认证，信息传输等协议。</p>
 								</div>
 
 								<div class="talent">
-									<h2>Security Analysis</h2>
-									<p>Analyse the security of computer systems and network
-									protocols.  </p>
+									<h2>安全分析</h2>
+									<p>对现有协议进行安全分析去证明其（不）安全性。</p>
 								</div>
 
 								<div class="talent">
-									<h2>Cryptanalysis</h2>
-									<p>Analyse the security of cryptographic algorithms.</p>
+									<h2>密码学分析</h2>
+									<p>分析密码学算法的安全性。</p>
 								</div>
 						</div>
 					</div><!--// .yui-gf -->
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Technical</h2>
+							<h2>技能</h2>
 						</div>
 						<div class="yui-u">
 
@@ -115,8 +111,8 @@
 								<li class="last">Git / SVN</li>
 							</ul>
 							<ul class="talent">
-								<li>Data encryption</li>
-								<li>Password cracking</li>
+								<li>数据加密解密相关</li>
+								<li>密码破解</li>
 								<li class="last">Package sniffing</li>
 							</ul>
 
@@ -126,17 +122,16 @@
 					<div class="yui-gf">
 	
 						<div class="yui-u first">
-							<h2>Application Area</h2>
+							<h2>科研应用领域</h2>
 						</div><!--// .yui-u -->
 						<div class="yui-u">
-								<h3>His research can be applied to the system (e.g. Internet
-								Banking System, Cloud service system) which requires:</h3>
+								<h3>科研成果主要用于有如下安全需求的通信系统（比如网上银行，电子上午，云储存）：</h3>
                 <br>
-                <p> <span style="padding-left:50px"><font size='3'>Secure authentication of users and/or servers;</span>
-                <br> <span style="padding-left:50px">Secure communication between parties;</span>
-                <br> <span style="padding-left:50px">Ability of anti-hacking;</span>
-                <br> <span style="padding-left:50px">Secure data transmission;</span>
-                <br> <span style="padding-left:50px">Secure data storage.</span></font></p>
+                <p> <span style="padding-left:50px"><font size='3'>安全用户和服务器认证；</span>
+                <br> <span style="padding-left:50px">安全通信；</span>
+                <br> <span style="padding-left:50px">抵抗攻击；</span>
+                <br> <span style="padding-left:50px">安全数据传输;</span>
+                <br> <span style="padding-left:50px">安全数据储存。</span></font></p>
 						</div><!--// .yui-u -->
 					</div><!--// .yui-gf -->
 
@@ -186,31 +181,28 @@ erials. </p>
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Education</h2>
+							<h2>学历</h2>
 						</div>
 						<div class="yui-u">
 
 							<div class="uni">
-							<h2>University of Birmingham, UK</h2>
-							<h3><strong>Ph.D</strong>, Computer Security</h3>
+							<h2>英国伯明翰大学</h2>
+							<h3><strong>博士</strong>， 信息安全</h3>
               <h4>2012-2015 <br>(Expected) </h4>
 						  </div>
 
               <br>
 						    <div class="uni">
-							    <h2>University of Wollongong, Australia</h2>
-							    <h3><strong>M.Phil</strong>, Network and Information Security</h3>
+							    <h2>澳大利亚卧龙岗大学</h2>
+							    <h3><strong>研究型硕士</strong>, 信息安全和密码学</h3>
                   <h4><br>2011-2012<br>2010-2011</h4>
-							    <h3><strong>M.Sc.</strong>, Network and Information
-							    Security</h3>
+							    <h3><strong>理学硕士</strong>， 软件工程与信息安全</h3>
 						    </div>
 
 
 						<div class="uni">
-							<h2>Northeast Agricultural University, China</h2>
-							<h3><strong>B.Eng.</strong>, Computer Science and Technology</h3>
-							<h3>Average Score: 82.3% (<strong>Top 1</strong> of the school)</h3>
-              <h3><strong>Best Thesis Award</strong></h3>
+							<h2>中国东北农业大学</h2>
+							<h3><strong>工学学士</strong>，计算机科学与技术</h3>
               <h4>2005-2009</h4>
             </div>
 
@@ -220,14 +212,14 @@ erials. </p>
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Professional Activities</h2>
+							<h2>其他：</h2>
 						</div>
 						<div class="yui-u">
 
               <div class="uni last">
                 <h3>
                   <ul type="disc">
-	                  <li><b>Invited Reviewer (Journal):</b><br>
+	                  <li><b>评审的期刊论文：</b><br>
                         <ul>
 	                        <li><i><a href="http://comjnl.oxfordjournals.org">The
 	                              Computer Journal</a></i></li>
@@ -239,7 +231,7 @@ erials. </p>
                               </ul>
                             </li><!--Invited Reviewer-->
 <br>
-	                 <li><b>SubReviewer (Conference):</b><br>
+	                 <li><b>评审的会议论文：</b><br>
 	                     <ul type="circle">
                          
 	                       <i><a href="http://www.acisp2013.qut.edu.au/">ACISP
@@ -282,14 +274,14 @@ erials. </p>
 
 					<div class="yui-gf">
 						<div class="yui-u first">
-							<h2>Publications</h2>
+							<h2>学术论文</h2>
 						</div>
 						<div class="yui-u">
 
 							<div class="uni last">
 							<h3>
 	              <ul type="square">
-	                <li><b>Journal:</b><br>
+	                <li><b>期刊：</b><br>
                       <ul type="circle">
                         <li>Guilin Wang, Jiangshan Yu, Qi
                         Xie. <a href="../doc/paper/TII-2013.pdf">'Security Analysis
@@ -312,7 +304,7 @@ erials. </p>
                         </ul>
 
                         <br>
-	                        <li><b>Conference:</b><br>
+	                        <li><b>会议：</b><br>
 	                            <ul type="circle">
                                 <li>Jiangshan Yu, Guilin Wang, and Yi
                                 Mu. <a href="../doc/paper/TrustCom2012.pdf">'Provably
@@ -325,7 +317,7 @@ erials. </p>
                             </li>
                             <br>
 
-	                            <li><b>Master Thesis:</b><br>
+	                            <li><b>硕士论文：</b><br>
 	                                <ul type="circle">
                                     <li>Jiangshan
                                     Yu. <a href="../doc/paper/Thesis.pdf">'Remote
@@ -344,88 +336,64 @@ erials. </p>
 
 					<div class="yui-gf last">
 						<div class="yui-u first">
-							<h2>Awards</h2>
+							<h2>荣誉</h2>
 						</div>
 						<div class="yui-u">
 
 						<div class="uni">
-							<h2>Scholarship</h2>
-							<h3>EPSRC, Funding for PhD studies at University of Birmingham.</h3>
+							<h2>博士奖学金</h2>
+							<h3>英国EPSRC科研机构, for PhD studies at University of
+							Birmingham.</h3>
               <h4>2012-2015</h4>
             </div>
 
 						<div class="uni">
-							<h2>Scholarship</h2>
-							<h3>University of Birmingham, Overseas top up scholarship for PhD studies.</h3>
+							<h2>博士奖学金</h2>
+							<h3>伯明翰大学, Overseas top up scholarship for PhD studies.</h3>
               <h4>2012-2015</h4>
             </div>
 
 						<div class="uni">
-              <h2>First Place Award</h2>
-							<h3>The Coniston poster competition, University of Birmingham.</h3>
+              <h2>第一名</h2>
+							<h3>Coniston杯科研海报竞赛, 伯明翰大学。</h3>
               <h4>2014</h4>
             </div>
 
 						<div class="uni">
-							<h2>Outstanding Graduates</h2>
-							<h3>Department of Education of Heilongjiang Province, Heilongjiang, China.</h3>
+							<h2>黑龙江省优秀毕业生</h2>
               <h4>2009</h4>
             </div>
 
 						<div class="uni">
-							<h2>Outstanding Graduates</h2>
-							<h3>Northeast Agricultural University,Harbin, Heilongjiang, China.</h3>
+							<h2>东北农业大学优秀毕业生</h2>
               <h4>2009</h4>
             </div>
 
+						<div class="uni">
+							<h2>一等奖学金</h2>
+							<h3>成栋学院，东北农业大学。</h3>
+              <h4>2006,2008</h4>
+            </div>
 
 						<div class="uni">
-							<h2>Best Undergraduate Thesis</h2>
-							<h3>Northeast Agricultural University,Harbin, Heilongjiang, China.</h3>
-              <h4>2009</h4>
+							<h2>二等奖学金</h2>
+							<h3>成栋学院，东北农业大学。</h3>
+              <h4>2007</h4>
             </div>
 
 
 						<div class="uni">
-							<h2>Outstanding Academic Award</h2>
-							<h3>Northeast Agricultural University,Harbin, Heilongjiang, China.</h3>
-              <h4>2008</h4>
-            </div>
-
-
-						<div class="uni">
-							<h2>First Class Scholarship</h2>
-							<h3>Northeast Agricultural University,Harbin, Heilongjiang, China.</h3>
-              <h4>2006,20007,2008</h4>
-            </div>
-
-
-						<div class="uni">
-							<h2>First Prize</h2>
-							<h3>China Contemporary Undergraduate Mathematical Contest in Modeling, China.</h3>
+							<h2>国家一等奖</h2>
+							<h3>高教社杯全国大学生数学建模竞赛</h3>
               <h4>2007</h4>
             </div>
 
 						<div class="uni">
-							<h2>Second Prize</h2>
-							<h3>China Contemporary Undergraduate Mathematical Contest in Modeling, China.</h3>
-              <h4>2006</h4>
+							<h2>国家二等奖</h2>
+							<h3>高教社杯全国大学生数学建模竞赛</h3>
+              <h4>2007</h4>
             </div>
 
-
-						<div class="uni">
-							<h2>Outstanding Student Award</h2>
-							<h3>Northeast Agricultural University,Harbin, Heilongjiang, China.</h3>
-              <h4>2006</h4>
-            </div>
-
-
-						<div class="uni last">
-							<h2>Outstanding Student Leadership Award</h2>
-							<h3>Northeast Agricultural University,Harbin, Heilongjiang, China.</h3>
-              <h4>2006</h4>
-            </div>
-			
            </div> <!--// .yui-u-->
 					</div><!--// .yui-gf -->
 
