--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -179,7 +179,7 @@ Oct.2014
             <div class="container">
                 <div class="templatemo-slogan text-center">
                     <span class="txt_darkgrey"> </span><span class="txt_orange">于江山</span>
-                    <p class="txt_slogan"><br><i><font size="5">英国伯明翰大学计
+                    <p class="txt_slogan"><br><i><font size="6">英国伯明翰大学计
                     算机信息安全博士 <br> </font></i></p>
                 </div>	
             </div>
@@ -770,6 +770,19 @@ Oct.2014
                                         <h5>Me</h5>
                                         <hr />
                                         <h4>英国</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
+                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
+                            <a class="colorbox" href="../images/my/DSC02329_a.JPG" data-group="pet">
+                                <div class="templatemo-project-box">
+                                    <img src="../images/my/DSC02329_b.JPG" class="img-responsive" alt="pet" />
+                                    <div class="project-overlay">
+                                        <h5>宠物</h5>
+                                        <hr />
+                                        <h4>萨摩</h4>
                                     </div>
                                 </div>
                             </a>
