--- a/web/index_en.html
+++ b/web/index_en.html
@@ -813,6 +813,19 @@ Oct.2014
                             </a>
                         </li>
 
+                        <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
+                            <a class="colorbox" href="../images/my/DSC02329_a.JPG" data-group="pet">
+                                <div class="templatemo-project-box">
+                                    <img src="../images/my/DSC02329_b.JPG" class="img-responsive" alt="pet" />
+                                    <div class="project-overlay">
+                                        <h5>Pet</h5>
+                                        <hr />
+                                        <h4>Dog</h4>
+                                    </div>
+                                </div>
+                            </a>
+                        </li>
+
                       <li class="col-lg-2 col-md-2 col-sm-2 gallery MA" >
                             <a class="colorbox" href="../images/wu/wu_1a.JPG" data-group="MA">
                                 <div class="templatemo-project-box">
