--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -1076,7 +1076,7 @@ Oct.2014
                         </div>
                         <div class="col-md-7 tweet_txt" >
                                 <span> <font size=6>天行健，君子以自强不息； 地势
-坤 君子以厚德载物.</font></span><br/>
+坤，君子以厚德载物.</font></span><br/>
                                 <span class="twitter_user"><font size=5>《周易》</font></span>
                         </div>
                         <div class="col-md-2">
