--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -70,7 +70,7 @@ Oct.2014
 <!--                                <li><a href="#templatemo-follow">FOLLOW</a></li>
 -->
                                 <li><a rel="nofollow" href="resume_cn.html" class="external-link">个人简历</a></li>
-                                <li><a rel="nofollow" href="../index.html" class="external-link">语言</a></li>
+                                <li><a rel="nofollow" href="../index.html" class="external-link">English</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
                     </div><!--/.container-fluid -->
