--- a/index.html
+++ b/index.html
@@ -715,8 +715,8 @@ Oct.2014
                       <li>Location: Liao Ning, China.</li>
                       <li>Area: 50,000 m<sup>2</sup></li>
                       <li>Gross leasable area (GLA): 6670 m<sup>2</sup>.</li>  
-                      <li>limestone: 90,000,000 m<sup>3</sup> (approximately 2.4
-                      billion tonne)</li>
+                      <li>limestone: 90,000,000 m<sup>3</sup> (approximately 240
+                      million tonne)</li>
                    </ul>
                   </font>
                 </div>
