--- a/index.html
+++ b/index.html
@@ -713,7 +713,8 @@ Oct.2014
                    <ul type="square"; style="margin-left: 200px; margin-bottom:
                               6px">
                       <li>Location: Liao Ning, China.</li>
-                      <li>Area: 50,000 m<sup>2</sup></li>
+                      <li>Area: 23,000 m<sup>2</sup>, can be extended to
+                      50,000m<sup>2</sup></li>
                       <li>Gross leasable area (GLA): 6670 m<sup>2</sup>.</li>  
                       <li>limestone: 90,000,000 m<sup>3</sup> (approximately 240
                       million tonne)</li>
