add link to the pics in about

--- a/index.html
+++ b/index.html
@@ -191,9 +191,11 @@ Oct.2014
                     <div class="col-md-4">
                         <div class="templatemo-service-item">
                             <div>
+                               <a href="#templatemo-research" style="color: black">
                                 <img style="width: 65px; height:
                                 65px;"src="images/shu.png" alt="icon" />
                                 <span class="templatemo-service-item-header">Research</span>
+                                </a>
                             </div>
                             <div style="height:4cm; overflow:auto"> <!--overflow:hiden is also nice -->
                             <p><font size="4">Mainly about my academic research, and a bit
@@ -211,9 +213,12 @@ Oct.2014
                    <div class="col-md-4">
                         <div class="templatemo-service-item" >
                             <div>
-                                <img style="width: 65px; height:
-                                65px;" src="images/wu.png" alt="icon"/>
+                               <a href="#templatemo-wu" style="color: black">
+                                 <img style="width:
+                                65px; height: 65px;" src="images/wu.png"
+                                alt="icon"/>
                                 <span class="templatemo-service-item-header">Martial Arts</span>
+                                </a>
                             </div>
                             <div style="height:4cm; overflow:auto">
 							                <p><font size="4">I learnt quite a few styles of
@@ -235,9 +240,11 @@ Oct.2014
                     <div class="col-md-4">
                         <div class="templatemo-service-item">
                             <div>
+                              <a href="#templatemo-biz" style="color: black">
                                 <img style="width: 65px; height:
                                 65px;"src="images/biz.png" alt="icon"/>
                                 <span class="templatemo-service-item-header">Business</span>
+                                </a>
                             </div>
                             <center>
                             <div style="height:4cm; overflow:auto">
