--- a/web/resume_cn.html
+++ b/web/resume_cn.html
@@ -254,15 +254,14 @@ erials. </p>
 	                       </li>
 	                         <br><br>
 
-                           <li><b>Founder and president</b><br>
-                         <li>Endless Martial Arts Association, Wollongong, NSW,
-                         Australia.</li>
+                           <li><b>创建人，第一届主席</b><br>
+                         <li>澳大利亚卧龙岗Endless Martial Arts 武术协会。
+                         .</li>
                          </li>
                          <br>
-                           <li><b>Manager</b><br>
-	                        <li>Department of Student Services,
-	                          Wollongong Chinese Students & Scholars Association,
-	                          NSW, Australia (2010-2012).</li>
+                           <li><b>部长</b><br>
+	                        <li>澳洲卧龙岗大学学生学者联谊会，学生事务部
+	                          （2010-2012）。</li>
                                </ul>
                              </h3>
                            <h4><br><br><br><br><br><br><br><br><br><br><br>2012<br><br><br><br>2012</h4>
