--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ Oct.2014
                                 <li><a href="#templatemo-contact">CONTACT</a></li>
 <!--                                <li><a href="#templatemo-follow">FOLLOW</a></li>
 -->
-                                <li><a rel="nofollow" href="resume.html" class="external-link">CV</a></li>
+                                <li><a rel="nofollow" href="web/resume.html" class="external-link">CV</a></li>
                                 <li><a rel="nofollow" href="web/index_cn.html" class="external-link">中文</a></li>
                             </ul>
                         </div><!--/.nav-collapse -->
