--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -286,7 +286,7 @@ Oct.2014
                         <p style="margin-left: 200px; margin-bottom:
                         6px"> <font size="4">于江山目前在英国政
                         府 <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC
-                        科研机构</a>和在<a href="www.birmingham.ac.uk/">伯明翰大
+                        科研机构</a>和<a href="www.birmingham.ac.uk/">伯明翰大
                         学</a>计算机学院的全额奖学金资助下攻读计算机信息安全博士
                         学位。 博士导师
                         是 <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
