--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -443,7 +443,8 @@ Oct.2014
                             <a href="http://acns2014.epfl.ch/">ACNS
                               2014</a>;
                             
-		                        <a href="http://www.ensa.ac.ma/sec2014/"> SEC 2014</a>;
+		                        <a href="http://www.ensa.ac.ma/sec2014/"> SEC 2014</a>;</i>
+                          <i>
 		                        <a href="http://fms-14.appspot.com/"> FMS 2014 </a>;
 		                        <a href="https://www.cylab.cmu.edu/news_events/events/wpes2014/">
 		                        WPES 2014 </a>;
