--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ Oct.2014
 		                           <a href="http://fms-14.appspot.com/"> FMS 2014 </a>;
 		                           <a href="https://www.cylab.cmu.edu/news_events/events/wpes2014/">
 		                             WPES 2014 </a>;
-                               <a href="http://www.etaps.org/index.php/2015/post">POST (ETAPS) 2015)</a>;
+                               <a href="http://www.etaps.org/index.php/2015/post">POST (ETAPS) 2015</a>;
                                <a href="http://icsd.i2r.a-star.edu.sg/asiaccs15/">ASIACCS 2015</a>.
                              </p>
                            </i>                          
