--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -326,8 +326,8 @@ Oct.2014
                             Authentication with Provably Secure
                             Instantiation'</a>, <i>IEEE Transactions on
                             Information Forensics and Security (TIFS)</i>
-                            (impact factor = 2.065, h5-index = 47), accepted,
-                            2014.
+                            (impact factor = 2.065, h5-index = 47), , Vol.9, No.12
+                            , pp. 2302-2313, Dec. 2014. DOI: 10.1109/TIFS.2014.2362979
                           </li>                          
                         </ul>
                         
