home button bug

--- a/web/resume.html
+++ b/web/resume.html
@@ -17,7 +17,7 @@
 <body>
 <div id="xyz" style="position: fixed;
     left: 90%;top:5%">
-   <a href="index_en.html"> <h3><b>Home</b></h3></a>
+   <a href="../index.html"> <h3><b>Home</b></h3></a>
 </div>
 <div id="doc2" class="yui-t7">
 	<div id="inner">
