--- a/index.html
+++ b/index.html
@@ -382,8 +382,7 @@ Oct.2014
                           <li>
                         Jiangshan Yu, Vincent Cheval, Mark
                         Ryan. <a href="doc/paper/DTKI.pdf">'DTKI: a new
-                        formalized PKI with no trusted parties'</a>. <i>IACR
-                        Cryptology ePrint Archive</i>,
+                        formalized PKI with no trusted parties'</a>. <i>CoRR abs/1408.1023</i>,
                         2014. (<a href="doc/paper/DTKI_report.pdf">Full
                         Version</a>)
                         </li>
