remove kud for now

--- a/index.html
+++ b/index.html
@@ -419,10 +419,10 @@ Oct.2014
                             HotSpot Workshop at ETAPS2014 </a> (Grenoble,
                             France).</li>
                           <br>
-                          <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf">
-                          'Key Usage Detection</a>. [CompSecSem] Security
-                          Seminar, School of Computer Science, University of
-                          Birmingham, Oct., 2014, Birmingham.</li>
+                          <!-- <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf"> -->
+                          <!-- 'Key Usage Detection</a>. [CompSecSem] Security -->
+                          <!-- Seminar, School of Computer Science, University of -->
+                          <!-- Birmingham, Oct., 2014, Birmingham.</li> -->
 <!--                          (<a href='doc/slides/kud.txt'>Abstract</a>)
 -->
                         </ul>
