--- a/web/index_cn.html
+++ b/web/index_cn.html
@@ -400,9 +400,9 @@ Oct.2014
                             HotSpot Workshop at ETAPS2014 </a> (Grenoble，法国)。
                             </li>
                           <br>
-                          <li>Jiangshan Yu. <a href="../doc/Slides/KUD_Slides.pdf">
-                          'Key Usage Detection</a>. [CompSecSem] 信息安全组会， 英国伯
-                          明翰大学计算机学院， 2014.</li>
+                          <!-- <li>Jiangshan Yu. <a href="../doc/Slides/KUD_Slides.pdf"> -->
+                          <!-- 'Key Usage Detection</a>. [CompSecSem] 信息安全组会， 英国伯 -->
+                          <!-- 明翰大学计算机学院， 2014.</li> -->
 <!--                          (<a href='doc/slides/kud.txt'>Abstract</a>)
 -->
                         </ul>
