--- a/index.html
+++ b/index.html
@@ -407,6 +407,10 @@ Oct.2014
                             HotSpot Workshop at ETAPS2014 </a> (Grenoble,
                             France).</li>
                           <br>
+                           <li>Jiangshan Yu. 'Device attacker models:
+                          fact and fiction'. Presented at SPW 2015,
+                          Cambridge university, Cambridge, UK.</li>
+                          <br>
                           <!-- <li>Jiangshan Yu. <a href="doc/Slides/KUD_Slides.pdf"> -->
                           <!-- 'Key Usage Detection</a>. [CompSecSem] Security -->
                           <!-- Seminar, School of Computer Science, University of -->
