--- a/index.html
+++ b/index.html
@@ -438,8 +438,11 @@ Oct.2014
                           The calendar of Security Privacy and Cryptography
                           related events </a></li>
                       
-                      <li><a href="http://icsd.i2r.a-star.edu.sg/staff/jianying/conference-ranking.html">
-                          Top Crypto and Security Conferences Ranking </a></li>
+                      <li>
+                          Top Crypto and Security Conferences Ranking at <a href="https://scholar.google.co.uk/citations?view_op=top_venues&hl=en&vq=eng_computersecuritycryptography">Google Scholar Metrics</a>, <a href="http://academic.research.microsoft.com/?SearchDomain=2&SubDomain=2&entitytype=2">Microsoft Academic Search</a>, or <a href="http://icsd.i2r.a-star.edu.sg/staff/jianying/conference-ranking.html"> CIF-based ranking
+                           </a>
+
+                      </li>
 
                       <li><a href="http://cseweb.ucsd.edu/users/mihir/crypto-topic-generator.html">
                           An Automatic Crypto Research Topic or Paper Title Generator </a></li>
