--- a/index.html
+++ b/index.html
@@ -439,7 +439,7 @@ Oct.2014
                           related events </a></li>
                       
                       <li>
-                          Top Crypto and Security Conferences Ranking at <a href="https://scholar.google.co.uk/citations?view_op=top_venues&hl=en&vq=eng_computersecuritycryptography">Google Scholar Metrics</a>, <a href="http://academic.research.microsoft.com/?SearchDomain=2&SubDomain=2&entitytype=2">Microsoft Academic Search</a>, or <a href="http://icsd.i2r.a-star.edu.sg/staff/jianying/conference-ranking.html"> CIF-based ranking
+                          Top Crypto and Security Conferences Ranking at <br><a href="https://scholar.google.co.uk/citations?view_op=top_venues&hl=en&vq=eng_computersecuritycryptography">Google Scholar Metrics</a>, <a href="http://academic.research.microsoft.com/?SearchDomain=2&SubDomain=2&entitytype=2">Microsoft Academic Search</a>, or <a href="http://icsd.i2r.a-star.edu.sg/staff/jianying/conference-ranking.html"> CIF-based ranking
                            </a>
 
                       </li>
