--- a/index.html
+++ b/index.html
@@ -96,29 +96,31 @@ Oct.2014
                         <div class="clearfix"></div>
                     </div>
                         <p style="margin-left: 500px; margin-bottom:
-                        6px"> <font size="4">Jiangshan Yu is
+                        6px"> <font size="4">I'm
                         an <a href="http://www.epsrc.ac.uk/Pages/default.aspx">EPSRC</a>
                         project funded Ph.D student working
                         with <a href="http://www.cs.bham.ac.uk/~mdr/">Prof. Mark
                         Ryan</a> on the project
                         "<a href="http://gow.epsrc.ac.uk/NGBOViewGrant.aspx?GrantRef=EP/H005501/1">
-                        Analysing Security and Privacy Properties</a>" in
-                        the <a href="http://www.cs.bham.ac.uk">School of
-                        Computer
+                        Analysing Security and Privacy Properties</a>"
+                        in
+                        the <a href="http://www.cs.bham.ac.uk">School
+                        of Computer
                         Science</a>, <a href="http://www.birmingham.ac.uk/">University
-                        of Birmingham</a>, U.K. He received his MSc and MPhil
-                        degree in computer science (information security, under
-                        the supervision
+                        of Birmingham</a>, U.K. I received my MSc and
+                        MPhil degree in computer science (information
+                        security, under the supervision
                         of <a href="http://www.uow.edu.au/~guilin/">Dr. Guilin
                         Wang</a>
                         and <a href="http://www.uow.edu.au/~ymu/">Prof. Yi
                         Mu</a>) respectively in 2011 and 2012, from
-                        the <a href="http://www.uow.edu.au/">University of
-                        Wollongong</a>, Australia. His research interests are in
-                        security and privacy. In particular, the focus of his
-                        research has been on secure authentication, PKI, key
-                        management, certificate security, and email security. He
-                        is also interested in cloud security and e-voting
+                        the <a href="http://www.uow.edu.au/">University
+                        of Wollongong</a>, Australia. My research
+                        interests are in security and privacy. In
+                        particular, the focus of my research has been
+                        on secure authentication, PKI, key management,
+                        certificate security, and email security. Im'
+                        also interested in cloud security and e-voting
                         security.</font>
                         </p>
                 </div>
